# software-testing-class-project

./: .env  .gitignore  Cargo.toml  EN_README.md  LICENSE  README.md  TODO.md
common_lib/: Cargo.toml
common_lib/tests/: json_handler.rs  priority_queue.rs
dentist/: Cargo.toml
dentist/src/: attend_manager.rs  lib.rs  main.rs  servecing.rs  serving.rs
libcommon/: Cargo.toml
libcommon/src/: database.rs  lib.rs  priority_queue.rs
libcommon/src/data_classes/: appointment.rs  pacient_account.rs  service_sheet.rs
libcommon/src/io_toolkit/: io_handler.rs  json_handler.rs
libcommon/tests/: database_test.rs  io_handler_test.rs  json_handler_test.rs  priority_queue.rs  priority_queue_test.rs  tests.rs
pacient/: Cargo.toml
pacient/src/: lib.rs  main.rs  pacient_manager.rs
pacient/tests/: pacient_manager.rs  tests.rs
receptionist/: Cargo.toml
receptionist/src/: datetime_parsing.rs  lib.rs  main.rs  pacient_account.rs  service_manager.rs  service_sheet.rs
receptionist/tests/: service_manager.rs  tests.rs
shared_lib/: Cargo.toml
shared_lib/src/: io_toolkit.rs  lib.rs  priority_queue.rs
shared_lib/src/io_toolkit/: io_handler.rs  json_handler.rs
shared_lib/tests/: io_handler_test.rs  io_test.rs  json_handler_test.rs  priority_queue_test.rs
src/: client.rs  input_handler.rs  lib.rs  main.rs  pacient.rs  queue_manager.rs  queues_collection.rs
tests/: Cargo.toml  creating_queue_files.rs  deleting_queue_files.rs  input_handling.rs  pacient_queue_test.rs  taking_tickets_client_queue.rs
tests/src/: lib.rs
