[package]
name = "common_lib"
version = "0.1.0"
edition = "2021"

[lib]
# disable since this project do NOT have documentation
doctest = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
anyhow = "1.0"
ctrlc = "3.4"

[dev-dependencies]
rand = "0.8"
