[package]
name = "common"
version = "0.1.0"
edition = "2021"

[lib]
# disabled since this project do NOT have documentation
doctest = false

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_derive = { workspace = true }
serde_json = "1.0"
anyhow = { workspace = true }
ctrlc = "3.4"

[dev-dependencies]
rand = "0.8"
