[package]
name = "tests"
version = "0.1.0"
edition = "2021"

[lib]
# disabled since this project does NOT have documentation
doctest = false

[dependencies]

[dev-dependencies]
pacient = { path = "../pacient" }
receptionist = { path = "../receptionist" }
dentist = { path = "../dentist" }
anyhow = { workspace = true }
